# xmake-project-manager

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  XMakeProjectManager.json.in  desktop.files.json  resources.qrc  xmake.lua
.github/workflows/: build_cmake.yml
assets/: introspect.lua  json.lua
src/: Pimpl.hpp  VersionHelper.hpp  VersionHelper.inl  XMakeProjectConstant.hpp  XMakeProjectPlugin.cpp  XMakeProjectPlugin.hpp
src/exewrappers/: XMakeTools.cpp  XMakeTools.hpp  XMakeTools.inl  XMakeWrapper.cpp  XMakeWrapper.hpp  XMakeWrapper.inl
src/kithelper/: KitData.hpp  KitHelper.cpp  KitHelper.hpp
src/project/: XMakeBuildConfiguration.cpp  XMakeBuildConfiguration.hpp  XMakeBuildConfiguration.inl  XMakeBuildStep.cpp  XMakeBuildStep.hpp  XMakeBuildStep.inl  XMakeBuildSystem.cpp  XMakeBuildSystem.hpp  XMakeBuildSystem.inl  XMakeProcess.cpp  XMakeProcess.hpp  XMakeProcess.inl  XMakeProject.cpp  XMakeProject.hpp  XMakeProjectImporter.cpp  XMakeProjectImporter.hpp  XMakeProjectParser.cpp  XMakeProjectParser.hpp  XMakeProjectParser.inl  XMakeRunConfiguration.cpp  XMakeRunConfiguration.hpp
src/project/buildoptions/: BuildOptionsModel.cpp  BuildOptionsModel.hpp  BuildOptionsModel.inl  XMakeBuildSettingsWidget.cpp  XMakeBuildSettingsWidget.hpp  XMakeBuildSettingsWidget.ui
src/project/parsers/: XMakeBuildParser.cpp  XMakeBuildParser.hpp  XMakeBuildParser.inl  XMakeOutputParser.cpp  XMakeOutputParser.hpp  XMakeOutputParser.inl
src/project/projecttree/: ProjectTree.cpp  ProjectTree.hpp  XMakeProjectNodes.cpp  XMakeProjectNodes.hpp  XMakeProjectNodes.inl
src/settings/general/: Settings.cpp  Settings.hpp  Settings.inl
src/settings/tools/: ToolTreeItem.cpp  ToolTreeItem.hpp  ToolTreeItem.inl  ToolsItemSettings.cpp  ToolsItemSettings.hpp  ToolsItemSettings.ui  ToolsModel.cpp  ToolsModel.hpp  ToolsSettingsAccessor.cpp  ToolsSettingsAccessor.hpp  ToolsSettingsPage.cpp  ToolsSettingsPage.hpp  ToolsSettingsWidget.cpp  ToolsSettingsWidget.hpp  ToolsSettingsWidget.ui
src/xmakeactionsmanager/: XMakeActionsManager.cpp  XMakeActionsManager.hpp
src/xmakeinfoparser/: XMakeBuildOptionsParser.cpp  XMakeBuildOptionsParser.hpp  XMakeBuildOptionsParser.inl  XMakeInfo.hpp  XMakeInfoParser.cpp  XMakeInfoParser.hpp  XMakeTargetParser.cpp  XMakeTargetParser.hpp
src/xmakeinfoparser/parsers/: BuildSystemFilesParser.cpp  Common.hpp  (+11 more)
(+5 files in other folders)
